test/functions/vass/proc-iter/error-iterating-over-procs-1.good
error-iterating-over-procs-1.chpl:4: error: cannot iterate over values of type real(64)
