test/functions/vass/proc-iter/error-iterating-over-procs-1.chpl
proc p10() {
  return 11.1;
}
for i in p10() do write(i);
